Update test cases

--- a/src/promptflow/tests/test_configs/flows/classification_accuracy_evaluation/flow.dag.yaml
+++ b/src/promptflow/tests/test_configs/flows/classification_accuracy_evaluation/flow.dag.yaml
@@ -31,3 +31,12 @@ nodes:
       grades: ${grade.output}
       variant_ids: ${inputs.variant_id}
     aggregation: true
+  - name: aggregation_assert
+    type: python
+    source:
+      type: code
+      path: aggregation_assert.py
+    inputs:
+      input1: ${inputs.groundtruth}
+      input2: ${inputs.prediction}
+    aggregation: true
