--- a/.github/workflows/promptflow-replay-test.yml
+++ b/.github/workflows/promptflow-replay-test.yml
@@ -86,5 +86,32 @@ jobs:
         -t ${{ github.workspace }}/src/promptflow/tests/sdk_cli_test `
         -l eastus `
         -m "unittest or e2etest" `
+        -j false `
         --coverage-config ${{ github.workspace }}/src/promptflow/tests/sdk_cli_test/.coveragerc
+    - name: Publish NUnit test results
+      if: always()
+      uses: dorny/test-reporter@v1.7.0
+      with:
+        name: Tests - Replay
+        path: "**/test-results.xml"
+        reporter: dotnet-trx
+        working-directory: "${{ env.testWorkingDirectory }}"
+        list-suites: all
+        list-tests: all
+        max-annotations: 10
+        fail-on-error: 'true'
+    - name: Generate Coverage Report
+      if: (success() || failure())
+      uses: danielpalme/ReportGenerator-GitHub-Action@5.1.25
+      continue-on-error: false
+      with:
+        reports: "${{ env.testWorkingDirectory }}/coverage.xml"
+        targetdir: coveragereport_${{ github.run_number }}
+        reporttypes: HtmlInline
+    - name: Upload CoverageReport
+      if: (success() || failure())
+      uses: actions/upload-artifact@v3.1.3
+      with:
+        name: CoverageReport
+        path: coveragereport_${{ github.run_number }}
 
