--- a/.github/workflows/promptflow-replay-test.yml
+++ b/.github/workflows/promptflow-replay-test.yml
@@ -79,7 +79,6 @@ jobs:
       working-directory: ${{ env.testWorkingDirectory }}
       run: |
         gci env:* | sort-object name
-        $env:PYTHONPATH=""
         cp ${{ github.workspace }}/src/promptflow/dev-connections.json.example ${{ github.workspace }}/src/promptflow/connections.json
         python "../../scripts/building/run_coverage_tests.py" `
         -p promptflow `
@@ -87,4 +86,24 @@ jobs:
         -l eastus `
         -m "unittest or e2etest" `
         --coverage-config ${{ github.workspace }}/src/promptflow/tests/sdk_cli_test/.coveragerc
+    - name: Publish Test Results
+      uses: EnricoMi/publish-unit-test-result-action@v2
+      with:
+        check_name: "Replay Test [${{ steps.display_env.outputs.GITHUB_HEAD_REF }}](https://github.com/microsoft/promptflow/actions/workflows/promptflow-replay-test.yml?query=branch:${{ steps.display_env.outputs.GITHUB_HEAD_REF }}++)"
+        comment_title: "Replay Test [${{ steps.display_env.outputs.GITHUB_HEAD_REF }}](https://github.com/microsoft/promptflow/actions/workflows/promptflow-replay-test.yml?query=branch:${{ steps.display_env.outputs.GITHUB_HEAD_REF }}++)"
+        files: "**/test-results.xml"
+    - name: Generate Coverage Report
+      if: (success() || failure())
+      uses: danielpalme/ReportGenerator-GitHub-Action@5.1.25
+      continue-on-error: false
+      with:
+        reports: "${{ env.testWorkingDirectory }}/coverage.xml"
+        targetdir: coveragereport_${{ github.run_number }}
+        reporttypes: HtmlInline
+    - name: Upload CoverageReport
+      if: (success() || failure())
+      uses: actions/upload-artifact@v3.1.3
+      with:
+        name: CoverageReport
+        path: coveragereport_${{ github.run_number }}
 
