--- a/src/promptflow/tests/test_configs/flows/flow_with_dict_input/flow.dag.yaml
+++ b/src/promptflow/tests/test_configs/flows/flow_with_dict_input/flow.dag.yaml
@@ -4,19 +4,19 @@ inputs:
 outputs:
   output:
     type: string
-    reference: ${print_val.output.value}
+    reference: ${get_dict_val.output.value}
 nodes:
+- name: get_dict_val
+  type: python
+  source:
+    type: code
+    path: get_dict_val.py
+  inputs:
+    key: ${inputs.key}
 - name: print_val
   type: python
   source:
     type: code
     path: print_val.py
   inputs:
-    key: ${inputs.key}
-- name: print_val2
-  type: python
-  source:
-    type: code
-    path: print_val.py
-  inputs:
-    key: ${print_val.output.result}
+    val: ${get_dict_val.output.value}
