--- a/.github/workflows/samples_flowinpipeline_pipeline.yml
+++ b/.github/workflows/samples_flowinpipeline_pipeline.yml
@@ -9,7 +9,7 @@ on:
     - cron: "28 19 * * *" # Every day starting at 3:28 BJT
   pull_request:
     branches: [ main ]
-    paths: [ examples/**, .github/workflows/samples_flowinpipeline_pipeline.yml ]
+    paths: [ examples/**, .github/workflows/samples_flowinpipeline_pipeline.yml, '!examples/flow/integrations/**' ]
   workflow_dispatch:
 
 env:
