--- a/.github/workflows/samples_getstarted_flowasfunction.yml
+++ b/.github/workflows/samples_getstarted_flowasfunction.yml
@@ -9,7 +9,7 @@ on:
     - cron: "17 21 * * *" # Every day starting at 5:17 BJT
   pull_request:
     branches: [ main ]
-    paths: [ examples/**, .github/workflows/samples_getstarted_flowasfunction.yml ]
+    paths: [ examples/**, .github/workflows/samples_getstarted_flowasfunction.yml, '!examples/flow/integrations/**' ]
   workflow_dispatch:
 
 env:
