--- a/.github/workflows/samples_getstarted_quickstart.yml
+++ b/.github/workflows/samples_getstarted_quickstart.yml
@@ -9,7 +9,7 @@ on:
     - cron: "55 21 * * *" # Every day starting at 5:55 BJT
   pull_request:
     branches: [ main ]
-    paths: [ examples/**, .github/workflows/samples_getstarted_quickstart.yml ]
+    paths: [ examples/**, .github/workflows/samples_getstarted_quickstart.yml, '!examples/flow/integrations/**' ]
   workflow_dispatch:
 
 env:
