--- a/.github/workflows/build_msi_installer.yml
+++ b/.github/workflows/build_msi_installer.yml
@@ -51,11 +51,8 @@ jobs:
           Expand-Archive -Path 'wix-archive.zip' -DestinationPath 'wix'
           Remove-Item -Path 'wix-archive.zip'
 
-
-      - name: Install Python and dependencies
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.9
+      - name: Python Setup
+        uses: "./.github/actions/step_create_python_environment"
 
       - name: Setup and Install dev promptflow
         if: ${{ github.event.inputs.version == null || github.event.inputs.version == '' }}
@@ -67,7 +64,6 @@ jobs:
       - name: Install stable promptflow
         if: ${{ github.event.inputs.version != null && github.event.inputs.version != '' }}
         run: |
-          python -m pip install --upgrade pip
           pip install promptflow[azure,executable]==$env:INPUT_VERSION promptflow-tools
         env:
           INPUT_VERSION: ${{ github.event.inputs.version }}
