Implement backward compatible mechanism for deprecated package tool (#1171)
# Description

Up til now, we have several tool breaking caused by package changing or
tool naming, which may makes user previous flow fail to run when they
upgrade tools. To provide smooth experience, we implement a tool
transition mechanism for backward compatibility.

In this PR, we do the following things:
- add `deprecated_tools` field to tool contract, which collects all
previous tool ids to current tool.
- handle backward compatibility of package tool ID changes in loading
tool.
- support to collect new tool id if node source tool is a legacy tool.

# All Promptflow Contribution checklist:
- [X] **The pull request does not introduce [breaking changes].**
- [ ] **CHANGELOG is updated for new features, bug fixes or other
significant changes.**
- [X] **I have read the [contribution guidelines](../CONTRIBUTING.md).**
- [] **Create an issue and link to the pull request to get dedicated
review from promptflow team. Learn more: [suggested
workflow](../CONTRIBUTING.md#suggested-workflow).**

## General Guidelines and Best Practices
- [X] Title of the pull request is clear and informative.
- [X] There are a small number of commits, each of which have an
informative message. This means that previously merged commits do not
appear in the history of the PR. For more information on cleaning up the
commits in your PR, [see this
page](https://github.com/Azure/azure-powershell/blob/master/documentation/development-docs/cleaning-up-commits.md).

### Testing Guidelines
- [X] Pull request includes test coverage for the included changes.

--- a/src/promptflow-tools/promptflow/tools/yamls/azure_content_safety.yaml
+++ b/src/promptflow-tools/promptflow/tools/yamls/azure_content_safety.yaml
@@ -47,3 +47,4 @@ promptflow.tools.azure_content_safety.analyze_text:
   name: Content Safety (Text Analyze)
   description: Use Azure Content Safety to detect harmful content.
   type: python
+  deprecated_tools: [content_safety_text.tools.content_safety_text_tool.analyze_text] 
