--- a/.github/workflows/build_msi_installer.yml
+++ b/.github/workflows/build_msi_installer.yml
@@ -76,7 +76,7 @@ jobs:
             $version=$env:INPUT_VERSION
           } else {
             $run_id="${{ github.run_id }}"
-            $version="$run_id.$run_id.$run_id"
+            $version="$run_id.0.0"
           }
           echo "::set-output name=version::$version"
         env:
