--- a/.github/workflows/build_msi_installer.yml
+++ b/.github/workflows/build_msi_installer.yml
@@ -75,8 +75,10 @@ jobs:
           if ($env:INPUT_VERSION) {
             $version=$env:INPUT_VERSION
           } else {
-            $run_id="${{ github.run_id }}"
-            $version="$run_id.0.0"
+            $yearmonth = Get-Date -Format "yyMM"
+            $dayhour = Get-Date -Format "ddHH"
+            $minutesecond = Get-Date -Format "mmss"
+            $version="$yearmonth.$dayhour.$minutesecond"
           }
           echo "::set-output name=version::$version"
         env:
