--- a/.github/workflows/promptflow-release-testing-matrix-alter.yml
+++ b/.github/workflows/promptflow-release-testing-matrix-alter.yml
@@ -18,7 +18,6 @@ on:
 env:
   testWorkingDirectory: src/promptflow
   PYTHONPATH: ${{ github.workspace }}/src/promptflow
-  PROMPT_FLOW_TEST_MODE: "replay"
   IS_IN_CI_PIPELINE: "true"
 jobs:
   id:
@@ -94,6 +93,8 @@ jobs:
       if : ${{ matrix.testType == 'sdk-cli' }}
       shell: pwsh
       working-directory: ${{ env.testWorkingDirectory }}
+      env:
+        PROMPT_FLOW_TEST_MODE: "replay"
       run: |
         python "../../scripts/building/run_coverage_tests.py" `
           -p promptflow `
@@ -113,6 +114,8 @@ jobs:
       if : ${{ matrix.testType == 'sdk-cli' }}
       shell: pwsh
       working-directory: ${{ env.testWorkingDirectory }}
+      env:
+        PROMPT_FLOW_TEST_MODE: "live"
       run: |
         python "../../scripts/building/run_coverage_tests.py" `
           -p promptflow `
@@ -131,6 +134,8 @@ jobs:
       if : ${{ matrix.testType == 'sdk-cli' }}
       shell: pwsh
       working-directory: ${{ env.testWorkingDirectory }}
+      env:
+        PROMPT_FLOW_TEST_MODE: "live"
       run: |
         python "../../scripts/building/run_coverage_tests.py" `
           -p promptflow `
@@ -159,9 +164,24 @@ jobs:
       with:
         name: Test Results (Python ${{ matrix.pythonVersion }}) (OS ${{ matrix.os }})
         path: ${{ github.workspace }}/*.xml
-    - name: Publish Test Results
-      uses: EnricoMi/publish-unit-test-result-action@v2
-      with:
-        check_name: "Matrix Tests"
-        comment_title: "Matrix Tests"
-        files: "${{ github.workspace }}/*.xml"
+  publish-test-results:
+    name: "Publish Tests Results"
+    needs: promptflow_tests
+    runs-on: ubuntu-latest
+    permissions:
+      checks: write
+      pull-requests: write
+      contents: read
+      issues: read
+    if: always()
+
+    steps:
+      - name: Download Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          path: artifacts
+
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        with:
+          files: "artifacts/**/*.xml"
