--- a/.github/workflows/sdk-cli-azure-test.yml
+++ b/.github/workflows/sdk-cli-azure-test.yml
@@ -9,7 +9,7 @@ on:
   pull_request:
     paths:
       - src/promptflow/**
-      - scripts/building/run_coverage_tests.py
+      - scripts/building/**
       - .github/workflows/promptflow-sdk-cli-azure-test.yml
 
   schedule:
